# simple-in-place-fft

./: CMakeLists.txt  LICENSE.md  Readme.md  simple_in_place_fft.c
include/: simple_in_place_fft.h
tests/: cfft_numerical_comparison.cpp  fft_ifft_test.c  rfft_numerical_comparison.cpp
