cmake_minimum_required(VERSION 3.4.1)
project (simple_in_place_fft)
    include_directories(include)
add_library(simple_in_place_fft SHARED simple_in_place_fft.c)
target_link_libraries(simple_in_place_fft m)
add_executable(fft_ifft_test tests/fft_ifft_test.c)
target_link_libraries(fft_ifft_test simple_in_place_fft)
option(BUILD_COMPARISON_TEST "Build comparison test" OFF)
if(BUILD_COMPARISON_TEST)
    find_package(PythonLibs 2.7 REQUIRED)
    include_directories(include ${PYTHON_INCLUDE_DIR})
    add_executable(rfft_numerical_comparison tests/rfft_numerical_comparison.cpp)
    target_link_libraries(rfft_numerical_comparison simple_in_place_fft ${PYTHON_LIBRARIES})
    add_executable(cfft_numerical_comparison tests/cfft_numerical_comparison.cpp)
    target_link_libraries(cfft_numerical_comparison simple_in_place_fft ${PYTHON_LIBRARIES})
endif()
